# saturnin-sdk

./: .pylintrc  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: app-print-file.rst  changelog.rst  conf.py  examples.rst  index.rst  ref-base.rst  ref-classic.rst  ref-client.rst  ref-collections.rst  ref-config.rst  ref-datapipe.rst  ref-debug.rst  ref-main.rst  ref-protocol-fbdp.rst  ref-protocol-fbsp.rst  ref-service.rst  ref-test-fbsp.rst  ref-tools-svc_run.rst  ref-tools-svc_test.rst  ref-types.rst  reference.rst  svc-dummy.rst  svc-roman.rst  svc-textio.rst  usage-guide.rst
examples/apps/dummy/: README.rst  pyproject.toml
examples/apps/dummy/src/saturnin/examples/apps/dummy/: api.py  application.py
examples/apps/print_file/: README.rst  pyproject.toml
examples/apps/print_file/src/saturnin/examples/apps/print_file/: api.py  application.py  print-file.cfg
examples/classic/: README.md  setup.py
examples/classic/saturnin/micro/textio/: api.py  service.py
examples/classic/saturnin/service/echo/: api.py  client.py  service.py  test.py
examples/classic/saturnin/service/roman/: api.py  client.py  service.py  test.py
examples/dummy/: README.rst  api.py  pyproject.toml
examples/dummy/src/examples/dummy/: api.py  service.py
examples/dummy/src/saturnin/examples/dummy/: api.py  service.py
examples/roman/: README.rst  api.py  pyproject.toml
examples/roman/src/examples/roman/: api.py
examples/roman/src/saturnin/examples/roman/: api.py  service.py
examples/textio/: README.rst  api.py  pyproject.toml  service.py
examples/textio/src/examples/textio/: api.py
examples/textio/src/saturnin/examples/textio/: api.py  service.py
saturnin/sdk/: __init__.py  base.py  classic.py  client.py  collections.py  config.py  datapipe.py  debug.py  fbdp.py  fbsd_pb2.py  fbsp.proto  fbsp.py  fbsp_pb2.py  fbsp_pb2.pyi  fbsptest.py  service.py  types.py
saturnin/sdk/protocol/: fbdp.py  fbsp.py
saturnin/sdk/test/: fbsp.py
saturnin/sdk/tools/: runner.py  svc_run.py  svc_test.py
src/saturnin/sdk/commands/: recipes.py
test/: test_fbsp.py
