[build_sphinx]
source-dir=sphinx
all-files=True


[metadata]
name = saturnin-sdk
version = attr: saturnin.sdk.PLATFORM_VERSION
description = Firebird Butler Development Platform for Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Pavel Císař
author_email = pcisar@users.sourceforge.net
license = MIT
license_file = LICENSE
url = https://github.com/FirebirdSQL/saturnin-sdk
keywords = Firebird Butler Services ZeroMQ Saturnin SDK
project_urls =
    Documentation = https://saturnin-sdk.rtfd.io
    Bug Reports = https://github.com/FirebirdSQL/saturnin-sdk/issues
    Funding = https://www.firebirdsql.org/en/donate/
    Source = https://github.com/FirebirdSQL/saturnin-sdk
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Object Brokering

[options]
zip_safe = True
python_requires = >=3.6, <4
install_requires =
    pyzmq>=18.0.0
    protobuf>=3.10.0
    firebird-butler-protobuf>=0.2.0
packages = saturnin.sdk, saturnin.sdk.protocol, saturnin.sdk.test, saturnin.sdk.tools
tests_require = nose
test_suite = nose.collector

[options.entry_points]
console_scripts =
    svc_run = saturnin.sdk.tools.svc_run:main
    svc_test = saturnin.sdk.tools.svc_test:main

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

