[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saturnin-example-dummy"
dynamic = ["version"]
description = "Test dummy microservice"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"},
]
keywords = ["text", "filter", "micro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    ]
dependencies = [
    "saturnin>=0.8.0"
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/saturnin-sdk"
Documentation = "https://saturnin-sdk.rtfd.io"
Issues = "https://github.com/FirebirdSQL/saturnin-sdk/issues"
Funding = "https://github.com/sponsors/pcisar"
Source = "https://github.com/FirebirdSQL/saturnin-sdk"

[project.entry-points."saturnin.service"]
"94e3b9e2-5acf-528b-8922-f7d1ccd39cdd" = "saturnin.examples.dummy.api:SERVICE_DESCRIPTOR"

[tool.hatch.version]
path = "src/saturnin/examples/dummy/api.py"
pattern = "(?i)^(SERVICE_VERSION)(: *str)? *= *([\\'\"])v?(?P<version>.+?)\\3"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/saturnin"]

[tool.hatch.envs.default]
dependencies = [
]
