[build-system]
requires = ["setuptools >= 53.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturnin-example-roman"
version = "0.2.0"
description = "Sample ROMAN service"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Císař", email = "pcisar@users.sourceforge.net"}]
keywords = ["text", "filter", "micro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    ]
dependencies = [
    "saturnin>=0.8.0"
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/saturnin-sdk"
Documentation = "https://saturnin-sdk.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/saturnin-sdk/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/saturnin-sdk"

[project.entry-points."saturnin.service"]
"413f76e8-4662-11e9-aa0d-5404a6a1fd6e" = "saturnin.examples.roman.api:SERVICE_DESCRIPTOR"
