[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saturnin-example-textio"
dynamic = ["version"]
description = "Sample TEXTIO microservice"
readme = "README.rst"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net"},
]
keywords = ["text", "input", "output", "micro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    ]
dependencies = [
    "saturnin>=0.10.0"
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/saturnin-sdk"
Documentation = "https://saturnin-sdk.rtfd.io"
Issues = "https://github.com/FirebirdSQL/saturnin-sdk/issues"
Funding = "https://github.com/sponsors/pcisar"
Source = "https://github.com/FirebirdSQL/saturnin-sdk"

[project.entry-points."saturnin.service"]
"7fe7a9fe-d60b-11e9-ad9f-5404a6a1fd6e" = "saturnin.examples.textio.api:SERVICE_DESCRIPTOR"

[tool.hatch.version]
path = "src/saturnin/examples/textio/api.py"
pattern = "(?i)^(SERVICE_VERSION)(: *str)? *= *([\\'\"])v?(?P<version>.+?)\\3"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/saturnin"]

[tool.hatch.envs.default]
dependencies = [
]
